Removed dependencies and old Janitor interaction